Agregacion de alerta "¡Hola!"

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <button id="saludarButton">Saludar</button>
+    <button id="saludarButton" onclick="alert('¡Hola!')">Saludar</button>
 
     <script src="eventos.js"></script>
 </body>
