Creacion del DIV en el index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-    <button id="saludarButton" onclick="alert('¡Hola!')">Saludar</button>
+    <div id="miDiv" style="padding: 5px; background-color: green;">
+        <button id="SaludarButton">Saludar</button>
+    </div>
 
     <script src="eventos.js"></script>
 </body>
