--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-    <div id="miDiv" style="padding: 5px; background-color: green;">
-        <button id="SaludarButton">Saludar</button>
-    </div>
+  <div id="miDiv" style="padding: 5px; background-color: green;">
+    <button id="saludarButton" onclick="event.stopPropagation(); alert(¡Hola!')">Saludar</button>
+</div>
 
     <script src="eventos.js"></script>
 </body>
