--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div id="miDiv" style="padding: 5px; background-color: green;">
-    <button id="saludarButton" onclick="event.stopPropagation(); alert(¡Hola!')">Saludar</button>
+    <button id="saludarButton" onclick="event.stopPropagation(); alert('¡Hola!')">Saludar</button>
 </div>
 
     <script src="eventos.js"></script>
